--- a/ue_01/landingpage/index.html
+++ b/ue_01/landingpage/index.html
@@ -4,7 +4,19 @@
   <head>
     <title>Scientific Programming</title>
     <meta charset="UTF-8">
-      <link rel="stylesheet" href="styles/landingPage.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Include Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="styles/landingPage.css">
   </head>
   <body>
     <header>
@@ -12,20 +24,20 @@
       <h2>Modelliere deine Wirklichkeit</h2>
     </header>
     <ul id="locations">
-      <li>Jlich</li>
-      <li>Aachen</li>
-      <li>Kln</li>
+      <li><a href="http://www.fz-juelich.de/ias/jsc/DE/Karriere/MATSE_Bachelor/MATSE_Bachelor_node.html">Jülich</a></li>
+      <li><a href="http://www.itc.rwth-aachen.de/cms/IT-Center/Lehre-Ausbildung/%7Eeubk/MATSE/">Aachen</a></li>
+      <li><a href="https://www.fh-aachen.de/fachbereiche/medizintechnik-und-technomathematik/einrichtungen/sp-studienortkoeln/">Köln</a></li>
     </ul>
-    <br>
     <img src="https://www.fh-aachen.de/fileadmin/_processed_/d/0/csm_642x277_scientific_programming_32d5ac331c.png"
-	 />
-    <br>
+	 class="img-responsive">
     Hier geht es zur 
-    <a href="https://www.fh-aachen.de/studium/scientific-programming-bsc/">Offizielle
+    <a href="https://www.fh-aachen.de/studium/scientific-programming-bsc/">offiziellen
       Website</a>
     <h3>Registrieren Sie sich!</h3>
     <form>
-      E-Mail:<br><input type="text" placeholder="E-Mail-Adresse eingeben">
+      E-Mail:
+      <br>
+      <input type="text" placeholder="E-Mail-Adresse eingeben">
       <br>
       <input type="submit" value="Registrieren">
     </form>
